feat:adding vite and node_modules for chatbot

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       <p>This is my first HTML page.</p>
       <p>Testing out OSM</p> -->
     </div>
-    <a href="#" onClick="pan()">Pan to</a>
+    <a href="#" onClick="move()">Pan to</a>
+    <a href="#" onClick="clearInterval(iterateID)">stop</a>
     <div id="map_area" style="width: 800px; height: 800px"></div>
   </body>
 </html>
