--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
@@ -9,5 +10,12 @@
   <body>
     <div id="app"></div>
     <script type="module" src="src/main.js"></script>
+    <div class="side"></div>
+    <div class="main">
+        <div class="send">
+            <input type="text" placeholder="Send a messege">
+            <input type="image" src="assets/send.svg" alt="Send">
+        </div>
+    </div>
   </body>
 </html>
