--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>TRAVEL AI</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="src/main.js"></script>
+    <div id="app">
+      <div id="chat_container"></div>
+
+      <form>
+        <textarea
+          name="prompt"
+          cols="1"
+          rows="1"
+          placeholder="アシスタントに聞いてみましょう"
+        ></textarea>
+        <button type="submit"><img src="assets/send.svg" alt="Send" /></button>
+      </form>
+    </div>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
