htmlファイルを少し編集しました。

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -12,10 +12,10 @@
     <script type="module" src="src/main.js"></script>
     <div class="side"></div>
     <div class="main">
-        <div class="send">
+        <form class="send" method="post">
             <input type="text" placeholder="Send a messege">
             <input type="image" src="assets/send.svg" alt="Send">
-        </div>
+        </form>
     </div>
   </body>
 </html>
