feat: finishing project

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,9 @@
   <body>
     <div id="app">
       <div id="chat_container"></div>
-
+      <button id="showLinksButton" class="seeLinksButton" style="display: none">
+        See Links
+      </button>
       <form>
         <textarea
           name="prompt"
